tests/cases/vectors/ok/vector-reserve-const.ari
const CAPACITY: i64 = 2 + 1;

fn main() -> i64 {
  var values: Vec[i64] = [];
  values.reserve(CAPACITY);
  values.push(10);
  values.push(11);
  values.push(12);
  return values.capacity() + values.len() + values[2];
}
