tests/cases/vectors/errors/vector-method-known-empty-last-after-clear.ari
fn main() -> i64 {
    var values: Vec[i64] = [1];
    values.clear();
    return values.last();
}
